compilers/ID/cool/regression/BASE_semanttest/self_type.cl.stderr
./BASE_semanttest/self_type.cl:17: Redefinition of basic class SELF_TYPE.
./BASE_semanttest/self_type.cl:4: Class C1 cannot inherit class SELF_TYPE.
Compilation halted due to static semantic errors.
